<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateGroupActivity">

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayout_CapacityAndGroupName"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/editText_capacity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Capacity"
                android:inputType="text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_groupName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Group Name"
                android:inputType="text"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_GroupDateGoing"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/editText_groupDateGoing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Meeting on yyyy-mm-dd"
            android:inputType="date"
            android:textSize="14sp"/>

            <EditText
                android:id="@+id/editText_groupTimeMeeting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Meeting at 00:00 am/pm"
                android:inputType="time"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText_groupDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Group Description (140 char limit)"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout_checkBoxHolders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout_groupCategories"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_GroupCategoriesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Group Categories"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox_PartyHardy"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onCategoryCheckboxClicked"
                    android:text="Party Hardy" />

                <CheckBox
                    android:id="@+id/checkBox_OffPiste"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onCategoryCheckboxClicked"
                    android:text="Off Piste" />

                <CheckBox
                    android:id="@+id/checkBox_TerrainPark"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onCategoryCheckboxClicked"
                    android:text="Terrain Park" />

                <CheckBox
                    android:id="@+id/checkBox_FamilyFriendly"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onCategoryCheckboxClicked"
                    android:text="Family Friendly" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_ridingDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_TrailDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Trail Difficulties"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/checkBox_GreenCircle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onDifficultyCheckboxClicked"
                    android:text="Green Circles" />

                <CheckBox
                    android:id="@+id/checkBox_BlueSquare"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onDifficultyCheckboxClicked"
                    android:text="Blue Squares" />

                <CheckBox
                    android:id="@+id/checkBox_BlackDiamonds"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onDifficultyCheckboxClicked"
                    android:text="Black Diamonds" />

                <CheckBox
                    android:id="@+id/checkBox_DoubleBlackDiamonds"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="onDifficultyCheckboxClicked"
                    android:text="Double Black Diamonds" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_CreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCreateTeamButtonClick"
            android:text="Create Team" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>