<resources>
    <string name="app_name">peAk</string>
    <string name="group_name">Group Name</string>
    <string name="going_to">Going to:</string>
    <string name="capacity">Capacity:</string>
    <string name="description">Description:</string>
    <string name="status">Status:</string>
    <string name="meeting_on">Meeting on:</string>
    <string name="send_button">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="edit_group_button">Edit Group</string>
    <string name="nav_header_title">USERNAME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="resortsInfoDrop">Resort Information</string>
    <string name="resortsInfo">Resorts Data</string>
    <string name="weatherDrop">Weather Forecast</string>
    <string name="weather">Weather Data</string>
    <string name="groupsDrop">Filter Groups By Category</string>
    <string name="checkBox">filter</string>
    <string name="checkBox2">filter</string>
    <string name="checkBox3">filter</string>
    <string name="checkBox4">filter</string>
    <string name="checkBox5">filter</string>
    <string name="checkBox6">filter</string>
    <string name="UserLogin">Username</string>
    <string name="UserPassword">Password</string>
    <string name="LoginButton">Login</string>
    <string name="GoToSignUpButton">Sign Up</string>
    <string name="UserSignUp">Username</string>
    <string name="PasswordSignUp">Password</string>
    <string name="BioSignUp">Bio</string>
    <string name="DOBSignUp">Date Of Birth</string>
    <string name="EmailSignUp">Email</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="myGroupsTitle">My Groups</string>
    <string name="myProfileTitle">My Profile</string>
    <string name="search">Search</string>
    <string name="maximum_capacity">Maximum capacity</string>
    <string name="date_mm_dd_yy">Date: MM/DD/YY</string>
    <string name="time_mm_hh_am_pm">Time: mm:hh AM/PM</string>
    <string name="resort">Resort</string>
    <string name="descriptionInputField">Description</string>
    <string name="statusInputField">Status</string>
    <string name="name_input_field">Group name</string>
    <string name="fillerCapacity">1/4</string>
    <string name="secondLineFiller">Group Description / Resort Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="username">Username</string>
    <string name="bio_powder_surfer">Bio: Powder Surfer</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="CreateAGroup">Create A Group</string>
    <string name="group">Group</string>

</resources>
